# robinsons_auctioneers

./: README.md
Backend/: Cargo.toml  Dockerfile  fly.toml  robinsons_auctioneers.db
Backend/app/: robinsons_auctioneers.db
Backend/src/: authentication.rs  crud.rs  database.rs  main.rs  queries.rs  response.rs  structs.rs
Frontend/: .env  admin.html  app.js  index.html  package-lock.json  package.json  sign_in.html  styles.css
Frontend/src/: App.jsx  helpers.js  utils.js
Frontend/src/components/: AuctionCard.jsx  BidModal.jsx  CreateAuctionModal.jsx  EditAuctionModal.jsx  Navbar.jsx
Frontend/src/context/: AuthContext.jsx
Frontend/src/pages/: AdminPage.jsx  AuctionDetailPage.jsx  DashboardPage.jsx  HomePage.jsx  LoginPage.jsx
